# dnvm

./: .dnvm  .editorconfig  .gitignore  .travis.yml  CHANGELOG  Directory.Build.props  Directory.Build.targets  README.md  build.proj  build.sh  dnvm.sln  dnvm.sln.targets  nuget.config  version.props
docs/: config_files.md
packaging/: README.md  macos.pkgproj  pack.sh
scripts/: common.sh  install-tools.sh  pack.sh  test.sh
src/Yaml/: Yaml.csproj
src/Yaml/IO/: YamlLexer.cs  YamlParser.cs  YamlWriter.cs
src/Yaml/Model/: YamlArray.cs  YamlDictionary.cs  YamlDocument.cs  YamlObject.cs  YamlString.cs
src/Yaml/Tokens/: YamlToken.cs
src/dnvm/: ConsoleExtensions.cs  ConsoleLogger.cs  DnvmServiceCollectionExtension.cs  DnvmSettings.cs  Ensure.cs  IConsole.cs  PhysicalConsole.cs  PlatformConstants.macos.cs  PlatformConstants.win.cs  Program.cs  README.md  dnvm.csproj
src/dnvm/Assets/: Asset.cs  AssetBase.cs  AssetFactory.cs  AssetInfo.cs  CliAsset.cs  DotNetAssetBase.cs  IAssetChannel.cs  IAssetFactory.cs  IAssetRepository.cs  OpenSslAsset.macos.cs  RuntimeAsset.cs  SdkAsset.cs  SharedFxAsset.cs  StableAssetChannel.cs  StableAssetChannel.macos.cs  StableAssetChannel.win.cs  StableReleasesAssetRepository.cs  ToolAsset.cs  (+2 more)
src/muxer/: setup.cmake
src/muxer/cli/: CMakeLists.txt  dotnet.cpp
src/native/: CMakeLists.txt  build.sh  native.proj  setup.cmake  variables.h.in
src/native/cli/: CMakeLists.txt  dotnet.cpp
src/native/dnvm-prompt/: CMakeLists.txt  dnvm-prompt.cpp
src/native/dotnet/: CMakeLists.txt  dotnet.cpp
test/: testdeps.props
test/Yaml.Tests/: LexerTests.cs  Yaml.Tests.csproj  YamlWriterTests.cs
test/dnvm.FunctionalTests/: CliInstallTest.cs  SharedFxInstallTest.cs  SharedRuntimeInstallTest.cs  dnvm.FunctionalTests.csproj
test/dnvm.Tests/: AssetChannelTest.cs  AssetRepositoryTest.cs  BadConfigFileReaderTest.cs  ConfigFileReaderTest.cs  ConfigFileYamlWriterTest.cs  DotNetAssetTest.cs  RuntimeAssetTest.cs  RuntimeConfigTest.cs  SdkAssetTest.cs  ToolManifestTest.cs  dnvm.Tests.csproj
test/dnvm.test/: YamlParserTests.cs  dnvm.test.csproj
(+105 files in other folders)
